--- a/trunk/amphty/res/values/strings.xml
+++ b/trunk/amphty/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Hello World, Amphty!</string>
     <string name="app_name">Amphty</string>
+    <string name="app_name2">Amdphty</string>
 </resources>
