--- a/trunk/qiushibaike/res/values/strings.xml
+++ b/trunk/qiushibaike/res/values/strings.xml
@@ -5,5 +5,7 @@
     <!-- Menu Items -->
     <string name="menu_refresh">刷新</string>
     <string name="menu_detail">详细</string>
-    <string name="menu_add">添加Feed</string>
+    <string name="menu_add">添加</string>
+    <string name="menu_delete">删除</string>
+    <string name="menu_edit">修改</string>
 </resources>
