--- a/trunk/SinaWeiboTest/res/values/strings.xml
+++ b/trunk/SinaWeiboTest/res/values/strings.xml
@@ -49,4 +49,11 @@
     <string name="top_menu_more">更多</string>
     <string name="nocomments">\u6682\u65f6\u6ca1\u6709\u8bc4\u8bba</string><!-- 暂时没有评论 -->
     <string name="gettingcom">\u6b63\u5728\u83b7\u53d6\u8bc4\u8bba</string><!-- 正在获取评论 -->
+    <string name="input">请输入</string>
+    <string name="comsuccess">评论成功</string>
+    <string name="neterror">网络错误，请重试。</string>
+    <string name="forwardsuccess">转发成功</string>
+	
+	
+	    
 </resources>
