--- a/trunk/Duole/res/values/strings.xml
+++ b/trunk/Duole/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, AllAppList!</string>
-    <string name="app_name">AllAppList</string>
+    <string name="app_name">Duole</string>
 </resources>
