--- a/trunk/Duole/res/values/strings.xml
+++ b/trunk/Duole/res/values/strings.xml
@@ -3,6 +3,7 @@
 	<string name="app_name">Duole</string>
 	<string name="itemlist_lost">\u8d44\u6e90\u5217\u8868\u4e0d\u5b58\u5728\uff01</string>
 	
+	<string name="date">\u65e5\u671f</string>
 	
 	<string name="network_config">\u7f51\u7edc\u8bbe\u7f6e</string>
 	<string name="network">\u7f51\u7edc</string>
@@ -20,8 +21,14 @@
 	<string name="volume_tweak">\u97f3\u91cf\u8bbe\u7f6e</string>
 	<string name="bright_tweak">\u4eae\u5ea6\u8bbe\u7f6e</string>
 	<string name="about">\u5173\u4e8e</string>
+	<string name="update_start">\u5f00\u59cb\u66f4\u65b0</string>
 	
+	<string name="version_new">\u53d1\u73b0\u65b0\u7248\u672c</string>
+	<string name="version">\u7248\u672c</string>
+	<string name="change_log">\u66f4\u65b0\u5185\u5bb9</string>
 	
+	<!-- button -->
+	<string name="btnClose">\u5173\u95ed</string>
 	<string name="btnPositive">\u786e\u5b9a</string>
 	<string name="btnNegative">\u53d6\u6d88</string>
 
@@ -40,11 +47,14 @@
 	<string name="security_title">\u5b89\u5168\u8bbe\u7f6e</string>
 	<string name="security_exit">\u9000\u51fa</string>
 	<string name="security_changePasswd">\u4fee\u6539\u5bc6\u7801</string>
+	<string name="check_update">\u68c0\u67e5\u66f4\u65b0</string>
+	<string name="client_uptodate">\u5ba2\u6237\u7aef\u5df2\u7ecf\u662f\u6700\u65b0\u3002</string>
 	
 	<!-- tips -->
 	<string name="network_unavailable">\u7f51\u7edc\u4e0d\u53ef\u7528\uff0c\u8bf7\u5148\u8fdb\u884c\u7f51\u7edc\u8bbe\u7f6e\u3002</string>
 	<string name="register_device">\u70b9\u6b64\u67e5\u770b\u6fc0\u6d3b\u6d41\u7a0b\u3002</string>
-	<string name="password_set_success"></string>
+	<string name="password_set_success">\u5bc6\u7801\u4fee\u6539\u6210\u529f</string>
+	<string name="downloading">\u4e0b\u8f7d\u4e2d\u002e\u002e\u002e</string>
 	
 	<!-- password -->
 	<string name="input_password">\u8f93\u5165\u5bc6\u7801</string>
@@ -59,6 +69,7 @@
 	<string name="password_old_wrong">\u539f\u5bc6\u7801\u4e0d\u6b63\u786e</string>
 	<string name="password_not_same">\u4e24\u6b21\u8f93\u5165\u7684\u5bc6\u7801\u4e0d\u4e00\u81f4</string>
 	<string name="password_cannot_null">\u5bc6\u7801\u4e0d\u80fd\u4e3a\u7a7a</string>
+	<string name="download_error">\u4e0b\u8f7d\u51fa\u9519\uff0c\u8bf7\u91cd\u8bd5\u3002</string>
 	
 </resources>
 
