--- a/trunk/Duole/res/values/strings.xml
+++ b/trunk/Duole/res/values/strings.xml
@@ -55,6 +55,10 @@
 	<string name="register_device">\u70b9\u6b64\u67e5\u770b\u6fc0\u6d3b\u6d41\u7a0b\u3002</string>
 	<string name="password_set_success">\u5bc6\u7801\u4fee\u6539\u6210\u529f</string>
 	<string name="downloading">\u4e0b\u8f7d\u4e2d\u002e\u002e\u002e</string>
+	<string name="storage">\u5b58\u50a8\u7a7a\u95f4</string>
+	<string name="tf_unmounted">\u5b58\u50a8\u5361\u5df2\u5f39\u51fa</string>
+	<string name="tf_total">\u5b58\u50a8\u5361\u603b\u5bb9\u91cf\uff1a</string>
+	<string name="tf_used">\u5df2\u4f7f\u7528\uff1a</string>
 	
 	<!-- password -->
 	<string name="input_password">\u8f93\u5165\u5bc6\u7801</string>
