--- a/trunk/Duole/res/values/strings.xml
+++ b/trunk/Duole/res/values/strings.xml
@@ -6,6 +6,7 @@
 	<string name="date">\u65e5\u671f</string>
 	
 	<string name="network_config">\u7f51\u7edc\u8bbe\u7f6e</string>
+	<string name="wifi_connection">Wi-Fi\u8fde\u63a5</string>
 	<string name="network">\u7f51\u7edc</string>
 	<string name="network_config_summary">\u70b9\u6b64\u8fdb\u884c\u7f51\u7edc\u8bbe\u7f6e</string>
 	<string name="system_tweak">\u7cfb\u7edf\u8c03\u8282</string>
@@ -75,5 +76,13 @@
 	<string name="password_cannot_null">\u5bc6\u7801\u4e0d\u80fd\u4e3a\u7a7a</string>
 	<string name="download_error">\u4e0b\u8f7d\u51fa\u9519\uff0c\u8bf7\u91cd\u8bd5\u3002</string>
 	
+	
+	<!-- wifi -->
+	<string name="wifi_enabling">\u6b63\u5728\u8fde\u63a5\uff1a</string>
+	<string name="wifi_enabled">\u5df2\u8fde\u63a5\uff1a</string>
+	<string name="wifi_closing">\u6b63\u5728\u5173\u95ed</string>
+	<string name="wifi_closed">\u5df2\u5173\u95ed</string>
+	<string name="wifi_unknown">\u9519\u8bef</string>
+	<string name="wifi_opened">\u5df2\u5f00\u542f</string>
 </resources>
 
