--- a/andconsd/res/values/strings.xml
+++ b/andconsd/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="ipaddressformatwrong">\u0049\u0050\u0020\u5730\u5740\u683c\u5f0f\u4e0d\u6b63\u786e\u3002</string>
     <string name="retrytip">\u8bf7\u91cd\u8bd5\u901a\u8fc7\u6d4f\u89c8\u5668\u8bbf\u95ee\u7ba1\u7406\u9875\u9762\u3002</string>
     <string name="networkerror">\u7f51\u7edc\u8fde\u63a5\u9519\u8bef\uff0c\u8bf7\u68c0\u67e5\u0077\u0069\u0066\u0069\u8fde\u63a5\u3002</string>
+    
+    <string name="deletesuccess">\u5220\u9664\u6210\u529f</string>
 </resources>
