--- a/PriorityRes/res/values/strings.xml
+++ b/PriorityRes/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, PriorityResActivity!</string>
-    <string name="app_name">PriorityRes</string>
+    <string name="hello">Hello</string>
+    <string name="app_name">PriorityRes2</string>
 </resources>
