--- a/SetupWizard/res/values/strings.xml
+++ b/SetupWizard/res/values/strings.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="network_tip">\u70b9\u51fb\u201c\u7f51\u7edc\u8bbe\u7f6e\u201d\uff0c\u5f00\u59cb\u8bbe\u7f6e\u0077\u0069\u0066\u0069\u7f51\u7edc\u3002</string>
+    <string name="useregister_tip">\u70b9\u51fb\u201c\u6ce8\u518c\u7528\u6237\u201d\uff0c\u5f00\u59cb\u6ce8\u518c\u7528\u6237\u3002</string>
+    
     <string name="app_name">SetupWizard</string>
     <string name="password">\u5bc6\u7801</string>
+    <string name="input_wifi_pass">\u8bf7\u8f93\u5165\u0057\u0069\u002d\u0046\u0069\u7f51\u7edc\u5bc6\u7801\u3002</string>
     <string name="btnPositive">\u786e\u5b9a</string>
     <string name="btnNegative">\u53d6\u6d88</string>
     <string name="password_wrong">\u5bc6\u7801\u9519\u8bef</string>
-    <string name="start">\u70b9\u51fb\u5f00\u59cb\u7f51\u7edc\u8bbe\u7f6e</string>
+    <string name="start">\u7f51\u7edc\u8bbe\u7f6e</string>
     <string name="net_config">\u70b9\u9009\u53ef\u7528\u7684\u0057\u0069\u0066\u0069\u7f51\u7edc</string>
     <string name="btnClose">\u5173\u95ed</string>
     <string name="welcome">\u6b22\u8fce\u4f7f\u7528\u591a\u4e50\u5e7c\u513f\u89e6\u6478\u7535\u8111</string>
@@ -18,9 +22,16 @@
     <string name="tip_wizardexit">\u9000\u51fa\u5411\u5bfc</string>
     <string name="btnPre">\u4e0a\u4e00\u6b65</string>
     <string name="register_user">\u7528\u6237\u6ce8\u518c</string>
-    <string name="user_exists">\u662f\u5426\u5df2\u7ecf\u662f\u0064\u0075\u006f\u006c\u0065\u0079\u0075\u0061\u006e\u002e\u0063\u006f\u006d\u7684\u7528\u6237\uff1f</string>
+    <string name="user_exists">\u662f\u5426\u6ce8\u518c\u65b0\u7528\u6237\uff1f</string>
     <string name="btn_yes">\u662f</string>
     <string name="btn_no">\u5426</string>
+    
+    <string name="device_id">\u673a\u5668\u7801</string>
+    <string name="contact_cc">\n\u8bf7\u81f4\u7535\uff1a\u0030\u0031\u0030\u002d\u0036\u0032\u0034\u0031\u0030\u0030\u0035\u0030\uff0c\u8054\u7cfb\u5ba2\u670d\u4eba\u5458\u3002n</string>
+    
+    <string name="machine_binding">\u6b63\u5728\u6ce8\u518c\u672c\u673a\u5668\uff0c\u8bf7\u7a0d\u5019\u3002</string>
+    <string name="bind_successful">\u673a\u5668\u7ed1\u5b9a\u6210\u529f\u3002</string>
+    <string name="bind_failed">\u7f51\u7edc\u8fde\u63a5\u5931\u8d25\uff0c\u8bf7\u91cd\u8bd5\u3002</string>
     
     <!-- bind -->
     <string name="btn_bind">\u7ed1\u5b9a\u673a\u5668\u7801</string>
@@ -35,7 +46,7 @@
     <string name="wifi_config">\u7f51\u7edc\u8bbe\u7f6e</string>
     <string name="wifi_notconfigured">\u65e0\u7ebf\u7f51\u7edc\u8fd8\u6ca1\u6709\u88ab\u6b63\u786e\u7684\u914d\u7f6e\uff0c\u662f\u5426\u7ee7\u7eed\u4e0b\u4e00\u6b65\uff1f</string>
         
-    <string name="input_username">\u8bf7\u8f93\u5165\u7535\u5b50\u90ae\u7bb1\u5730\u5740</string>
+    <string name="input_username">\u8bf7\u8f93\u5165\u7535\u5b50\u90ae\u7bb1\u5730\u5740\u0028\u4f8b\u5982\uff1a\u0078\u0069\u0061\u006f\u006d\u0069\u006e\u0067\u0040\u0064\u0075\u006f\u006c\u0065\u0079\u0075\u0061\u006e\u002e\u0063\u006f\u006d\u0029</string>
     <string name="register_username">\u586b\u5199\u7528\u6237\u540d</string>
     
     <string name="input_password">\u8bbe\u7f6e\u5bc6\u7801</string>
@@ -64,5 +75,7 @@
     
     <string name="email_incorrect">\u0045\u006d\u0061\u0069\u006c\u683c\u5f0f\u4e0d\u6b63\u786e</string>
     <string name="email_name_null">\u90ae\u7bb1\u7528\u6237\u540d\u4e0d\u80fd\u4e3a\u7a7a</string>
+    
+    <string name="start_useregister">\u6ce8\u518c\u7528\u6237</string>
     
 </resources>
